--- a/css/screen.css
+++ b/css/screen.css
@@ -1,23 +1,27 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: 'Lexend Deca', sans-serif, serif;
 }
 
 html {
   font-size: 62.5%; /* 1rem = 10px (for easier calculation) */
-}
-
-body {
-  font-size: 1.7rem; /* 16px */
   line-height: 1.5;
 }
 
+body {
+  font-size: 1.6rem; /* 16px */
+}
+
 h1 {
-  font-size: 3.2rem; /* 36px */
+  font-size: 2.7rem; /* 36px */
   margin-bottom: 1.2rem; /* 12px */
 }
 
+p{
+  font-size: 1.7rem;
+}
+
 label {
-  font-size: 1.8rem; /* 18px */
+  font-size: 1.7rem; /* 18px */
 }
 
 input[type="email"] {
@@ -26,10 +30,11 @@ input[type="email"] {
 
 /* Mobile-first Form */
 form {
-  padding: 3.5rem;
-  background-color: #f5f5f5;
+  padding: 10rem 3.5rem;
+  background-color: #F5EEF8;
   margin: 10rem auto;
   box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
+  width: 80%;
 }
 
 li {
@@ -52,7 +57,7 @@ input[type="checkbox"] {
 }
 
 input[type="submit"] {
-  background-color: #007acc;
+  background-color: #76448A;
   color: #fff;
   padding: 0.8rem 1.6rem; /* 8px 16px */
   margin-top: 1.8rem;
@@ -61,6 +66,8 @@ input[type="submit"] {
   cursor: pointer;
   border-radius: 2rem; /* 20px */
   transition: background-color 0.3s ease-in-out;
+  font-family: 'Lexend Deca', sans-serif, serif;
+  font-size: 1.6rem;
 }
 
 input[type="submit"]:hover {
