--- a/css/screen.css
+++ b/css/screen.css
@@ -71,7 +71,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #C0392B;
+  background-color: #1B4F72;
 }
 
 /* Media Query for Larger Screens */
